syntax = "proto3";

package proto.v1;

import "proto/v1/effect.proto";
import "proto/v1/enums.proto";
import "proto/v1/target.proto";

option go_package = "github.com/user/repo/proto/model";

// Ability 定义角色的特殊技能。
message Ability {
  int32 id = 1;
  string name = 2; // 能力名称
  string description = 3; // 能力描述
  TriggerType trigger_type = 4; // 触发时机
  repeated GameEventType event_filters = 5; // 当 trigger_type 为 ON_GAME_EVENT 时，指定监听的事件类型
  Target target = 6; // 目标
  bool once_per_loop = 7; // 每个循环只能使用一次
  PlayerRole refusal_role = 8; // 拒绝该能力的角色
  Effect effect = 9;
  bool used_this_loop = 10; 
}